[tool.poetry]
name = "keras-flops"
version = "0.1.1"
description = "FLOPs calculator for neural network architecture written in tensorflow 2.x (tf.keras)"
authors = ["tokusumi <tksmtoms@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokusumi/keras-flops"
include = [
    "LICENSE",
]
keywords = ["tensorflow2", "flops", "profiler"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.0"
mypy = "^0.782"
black = "^19.10b0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
